<resources>
    <string name="app_name">ELibrary</string>
    <string name="administrative_efficiency_optimizing_library_oversight_using_e_library">Administrative Efficiency: Optimizing Library Oversight using E-Library</string>
    <string name="get_started">Get Started</string>
    <string name="manage_your_library">Manage your Library</string>
    <string name="books">Books</string>
    <string name="users">Users</string>
    <string name="library">Library</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="version_2_30">Version 2.30</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="add_user">Add User</string>
    <string name="borrow">Borrow</string>
    <string name="select_user">Select User</string>
    <string name="select_book">Select Book</string>
    <string name="return_str">Return</string>
    <string name="quantity">Quantity</string>
    <string name="book_name">Book Name</string>
</resources>