<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back"
    tools:context=".SplashActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="24dp"
        android:layout_margin="20dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:cardElevation="5dp"
        android:elevation="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/manrope_bold"
                android:gravity="center"
                android:text="@string/manage_your_library"
                android:textColor="#464646"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/manrope_bold"
                android:gravity="center"
                android:text="@string/administrative_efficiency_optimizing_library_oversight_using_e_library"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/get_started_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/get_started_btn_selector"
                android:fontFamily="@font/manrope_bold"
                android:paddingHorizontal="38dp"
                android:text="@string/get_started"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>